--- a/deploy/nodek8s/templates/deployment.yaml
+++ b/deploy/nodek8s/templates/deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: {{ .Chart.Name }}
-          image: "nodek8s:{{default "latest" .Values.image.tag }}"
+          image: "verchol/nodek8s:{{default "latest" .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - containerPort: {{ .Values.service.internalPort }}
