--- a/deploy/nodek8s/templates/tests/mongoDbTest.yaml
+++ b/deploy/nodek8s/templates/tests/mongoDbTest.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: "{{ .Release.Name }}-credentials-test"
-  annotations:
-    "helm.sh/hook": test-success
+  #annotations:
+  #  "helm.sh/hook": test-success
 spec:
   containers:
   - name: {{ .Release.Name }}-credentials-test
