--- a/deploy/nodek8s/values.yaml
+++ b/deploy/nodek8s/values.yaml
@@ -17,7 +17,7 @@ image:
   tag: master
   pullPolicy: Always
 service:
-  name: nginx
+  name: nodek8s
   type: ClusterIP
   externalPort: 80
   internalPort: 3000
